--- a/partials/navbar.html
+++ b/partials/navbar.html
@@ -1,15 +1,15 @@
 <nav class="navbar fixed-bottom bg-primary primary">
   <div class="container">
-    <a href="index" data-i18n="home">Home</a>
-    <a href="html/educational" data-i18n="educational">educational</a>
-    <a href="html/fun" data-i18n="fun">fun</a>
+    <a href="/index.html" data-i18n="home">Home</a>
+    <a href="/html/educational.html" data-i18n="educational">educational</a>
+    <a href="/html/fun.html" data-i18n="fun">fun</a>
     <a
       href="https://www.youtube.com/channel/UChyQgE14JcfQxFafHyaZkwQ"
       data-i18n="youtube"
       >youtube</a
     >
-    <a href="html/academic" data-i18n="academic">academic</a>
-    <a href="html/about" data-i18n="about">about</a>
+    <a href="/html/academic.html" data-i18n="academic">academic</a>
+    <a href="/html/about.html" data-i18n="about">about</a>
     <ul class="dropdown-menu" id="languageSwitcher">
       <li>
         <span class="dropdown-item" data-i18n="english">English</span>
